# fus-device-update-azure

./: CMakeLists.txt  README
cmake/: FindIotHubClient.cmake  aduc_helpers.cmake  agentRules.cmake
daemon/: CMakeLists.txt  adu-agent-setup.service  adu-agent-setup.sh  adu-agent.service
scripts/: adu-diag.sh  debug_agent.sh
src/: CMakeLists.txt
src/adu-shell/: CMakeLists.txt
src/adu-shell/inc/: adushell_const.hpp  fusapplication_tasks.hpp  fusfirmware_tasks.hpp  fusupdate_tasks.hpp  swupdate_tasks.hpp
src/adu-shell/src/: fusapplication_tasks.cpp  fusfirmware_tasks.cpp  fusupdate_tasks.cpp  main.cpp
src/adu_types/: CMakeLists.txt
src/adu_types/inc/aduc/: adu_types.h
src/adu_workflow/src/: agent_workflow.c
src/agent/: CMakeLists.txt
src/agent/adu_core_interface/: CMakeLists.txt
src/agent/pnp_helper/: CMakeLists.txt
src/agent/src/: health_management.c  main.c
src/communication_abstraction/: CMakeLists.txt
src/communication_abstraction/src/: client_handle_helper.c
src/communication_managers/iothub_communication_manager/: CMakeLists.txt
src/content_handlers/: CMakeLists.txt
src/content_handlers/fsupdate_application_handler/: CMakeLists.txt
src/content_handlers/fsupdate_firmware_handler/: CMakeLists.txt
src/extensions/step_handlers/fsupdate_handler/: CMakeLists.txt
src/extensions/step_handlers/fsupdate_handler/inc/aduc/: fsupdate_handler.hpp  fsupdate_result.h
src/extensions/step_handlers/fsupdate_handler/src/: fsupdate_handler.cpp
src/inc/aduc/: device_info_exports.h  result.h
src/logging/zlog/: CMakeLists.txt
src/platform_layers/linux_platform_layer/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/c_utils/: CMakeLists.txt
src/utils/crypto_utils/: CMakeLists.txt
src/utils/hash_utils/: CMakeLists.txt
src/utils/jws_utils/: CMakeLists.txt
src/utils/process_utils/: CMakeLists.txt
src/utils/system_utils/: CMakeLists.txt
tools/AduCmdlets/: UpdateScriptGeneratorFirmwareIMX8MM.ps1  create-adu-import-manifest.sh
(+48 files in other folders)
